--- a/load_Census_house_data.ipynb
+++ b/load_Census_house_data.ipynb
@@ -30,7 +30,7 @@
     "counties_by_state = fips_df.groupby('state_fips')['county_fips'].apply(list).to_dict()\n",
     "\n",
     "# API Key and Year Range\n",
-    "api_key = '591bc6316201f043be8632729de3f4fffdee853e'  \n",
+    "api_key = 'fake_key'  \n",
     "years = range(2010, 2024)\n",
     "\n",
     "all_data = []\n",
