--- a/load_Census_house_data.ipynb
+++ b/load_Census_house_data.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e138ee1f",
+   "metadata": {},
+   "source": [
+    "# Collect Census Data from US Census API\n",
+    "This file loads yearly median house price data from the US Census using the API. To get an API key use [this](https://api.census.gov/data/key_signup.html) link. This notebook also uses an external file called `state_and_county_fips_master.csv`. This csv file is sourced from this public github [repository](https://github.com/kjhealy/fips-codes). "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c27a6c75",
    "metadata": {},
    "outputs": [],
@@ -10,6 +19,7 @@
     "import requests\n",
     "import time\n",
     "import os\n",
+    "import pandas as pd\n",
     "\n",
     "def fetch_census_data(api_key, year, state_code, county_codes):\n",
     "    base_url = f\"https://api.census.gov/data/{year}/acs/acs5\"\n",
@@ -24,17 +34,45 @@
     "    if response.status_code == 200:\n",
     "        return response.json()\n",
     "    else:\n",
-    "        return None\n",
-    "\n",
+    "        return None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7d4cc4ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Group counties by state\n",
+    "fips_df = pd.read_csv('census_data/state_and_county_fips_master.csv')\n",
+    "\n",
+    "# split FIPS codes\n",
+    "def split_fips(row):\n",
+    "    fips = str(row['fips']).zfill(5) \n",
+    "    return pd.Series({\n",
+    "        'state_fips': fips[:2],  \n",
+    "        'county_fips': fips[2:], \n",
+    "    })\n",
+    "\n",
+    "# function to each row\n",
+    "fips_df[['state_fips', 'county_fips']] = fips_df.apply(split_fips, axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b4ef4c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "counties_by_state = fips_df.groupby('state_fips')['county_fips'].apply(list).to_dict()\n",
     "\n",
-    "# API Key and Year Range\n",
     "api_key = 'fake_key'  \n",
     "years = range(2010, 2024)\n",
     "\n",
     "all_data = []\n",
-    "filename = 'census_data/census_data.csv'\n",
+    "filename = 'census_data/fake.csv' #save census data into this csv\n",
     "\n",
     "for year in years:\n",
     "    for state_code, county_codes in counties_by_state.items():\n",
@@ -54,7 +92,6 @@
     "                    all_data = []\n",
     "            time.sleep(0.5)\n",
     "\n",
-    "# Save any remaining data\n",
     "if all_data:\n",
     "    file_exists = os.path.isfile(filename)\n",
     "    temp_df = pd.DataFrame(all_data, columns=['Name', 'MedianHouseValue', 'State', 'County', 'year'])\n",
